[project]
name = "traveler-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Nasser Tapsoba",email = "nassertapsoba@meta.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
